--- a/Beacon/Blazor/Components/SideBar.razor
+++ b/Beacon/Blazor/Components/SideBar.razor
@@ -1,6 +1,4 @@
-﻿<div class="font-ark z-10 bg-sidepanel beacon-text
-flex h-screen min-w-20 flex-col items-center
-rounded-r-3xl py-5">
+﻿<div class="font-ark z-10 bg-sidepanel beacon-text flex h-screen min-w-20 flex-col items-center rounded-r-3xl py-5">
 	
 	<div class="flex-1 flex flex-col">
 		<button class="size-12 text-center text-lg @(ActivePage == BeaconPage.SongLibrary ? "text-l-primary dark:text-d-primary" : "")"
