--- a/Beacon/Blazor/Pages/BibleLibrary.razor
+++ b/Beacon/Blazor/Pages/BibleLibrary.razor
@@ -3,27 +3,27 @@
 @inject SettingsService settingsService
 @inject IJSRuntime jSRuntime
 
-<div class="grid-cols-12 relative grid h-full w-full">
+<div class="relative flex h-full w-full">
 
 	<!-- |===== LEFT SIDE ======| -->
-	<div class="bg-container col-span-4 left-0 top-0 flex h-full overflow-auto rounded-r-3xl">
+	<div class="border-r-2 border-sidepanel left-0 top-0 flex h-full flex-none overflow-auto rounded-r-3xl bg-gradient-to-br from-l-container to-l-background dark:from-d-container dark:to-d-background">
 
-		<div class="border-r-2 border-sidepanel bg-container relative flex h-full w-2/3 flex-col overflow-hidden rounded-r-3xl">
+		<div class="flex h-full w-52 flex-col">
 			<DebounceInput id="BookSearch" class="bg-default text-accented border-0 mx-5 mt-10 min-h-16 rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 			placeholder="Book" @bind-Value="searchBook" @bind-Value:event="oninput" OnValueChanged="OnBookSearchChanged" ForceNotifyByEnter="true"
 			@onkeyup="async (args) => { await OnKeySearch(args, 'b'); }"></DebounceInput>
 
-			<div class="m-5 h-full overflow-auto rounded-xl">
+			<div class="m-5 h-full overflow-auto">
 				<BookList Books="books" SelectedBookChanged="BookChanged" SelectedBook="selectedBook"></BookList>
 			</div>
 		</div>
 
-		<div class="border-r-2 border-sidepanel bg-container relative flex h-full w-1/3 flex-col overflow-hidden rounded-r-3xl pt-10">
+		<div class="flex h-full w-32 flex-col pt-10">
 			<DebounceInput id="ChapterSearch" class="bg-default text-accented border-0 mx-5 min-h-16 rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 			placeholder="Chapter" @bind-Value="searchChapter" @bind-Value:event="oninput" OnValueChanged="OnChapterSearchChanged" @onkeyup="async (args) => { await OnKeySearch(args, 'c'); }"></DebounceInput>
 
 
-			<div class="m-5 h-full overflow-auto rounded-xl">
+			<div class="m-5 h-full overflow-auto">
 				<ChapterList Chapters="chapters" SelectedChapter="selectedChapter" SelectedChapterChanged="ChapterChanged"></ChapterList>
 			</div>
 		</div>
@@ -32,12 +32,19 @@
 
 
 	<!-- |===== RIGHT SIDE ======| -->
-	<div class="col-span-8 bg-default flex h-full w-full flex-col overflow-auto">
+	<div class="bg-default flex h-full w-full flex-col overflow-auto">
 
 		<!--------[ TOP ]-------->
-		<div class="via-l-container/25 border-b-2 border-sidepanel to-l-container/0 flex min-h-28 w-full rounded-b-3xl bg-gradient-to-t from-l-container px-10 dark:from-d-container dark:via-d-container/25 dark:to-d-container/0">
-			<DebounceInput id="VerseSearch" class="bg-default text-accented border-0 mx-5 mt-10 h-16 max-w-20 rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+		<div class="border-b-2 border-sidepanel gap-40 flex min-h-28 justify-between w-full rounded-b-3xl bg-gradient-to-t from-l-container to-l-background px-10 dark:from-d-container dark:to-d-background">
+			<DebounceInput id="VerseSearch" class="bg-default text-accented border-0 mt-10 h-16 max-w-20 rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 			placeholder="Verse" @bind-Value="searchVerse" @bind-Value:event="oninput"  @onkeyup="async (args) => { await OnKeySearch(args, 'v'); }"></DebounceInput>
+
+			<div class="flex flex-col mt-3.5 w-full gap-2">
+				<BeaconSearchMode isBibleSearchModes="true"></BeaconSearchMode>
+
+				<DebounceInput id="VerseTextSearch" class="bg-default text-accented border-0  h-16 w-full rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+				placeholder="Search text..." @bind-Value="searchVerseText" @bind-Value:event="oninput" @onkeyup="async (args) => { await OnKeySearch(args, 't'); }"></DebounceInput>
+			</div>
 		</div>
 
 
@@ -46,7 +53,7 @@
 
 			<BibleLanguageList SelectedTranslation="@selectedTranslation" Translations="translations" SelectedTranslationChanged="TranslationChanged"></BibleLanguageList>
 
-			<VerseList Verses="verses" SelectedVerse="selectedVerse" SelectedVerseChanged="VerseChanged"></VerseList>
+			<VerseList IsGlobalMode="isGlobalSearch" Verses="verses" SelectedVerse="selectedVerse" SelectedVerseChanged="VerseChanged"></VerseList>
 		</div>
 
 	</div>
@@ -66,10 +73,12 @@
 	private Chapter selectedChapter = new Chapter();
 	private BeaconVerse selectedVerse = new BeaconVerse();
 
+	private bool isGlobalSearch = false;
 	private string selectedTranslation = "";
 	private string searchBook = "";
 	private string searchChapter = "";
 	private string searchVerse = "";
+	private string searchVerseText = "";
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -86,16 +95,17 @@
 
 		selectedBook = books[0];
 		selectedChapter = chapters[0];
-		selectedVerse = verses[0];
 
 	}
 
 	private async Task TranslationChanged(string translation){
 		selectedTranslation = translation;
+		int selectedVerseCache = selectedVerse.Verse;
 		books = await BibleService.GetBooksAsync(selectedTranslation, settingsService.settings.AlwaysEnglishBookNames);
 		await BookChanged(selectedBook);
 		await ChapterChanged(selectedChapter);
-		await VerseChanged(selectedVerse);
+		if (selectedVerseCache != 0)
+			await VerseChanged(verses[selectedVerseCache - 1]);
 	}
 
 	private async Task BookChanged(Book book){
@@ -118,19 +128,37 @@
 	}
 	private async Task VerseChanged(BeaconVerse verse)
 	{
+
+		if (!String.IsNullOrWhiteSpace(searchVerseText))
+		{
+			searchVerseText = "";
+			await BookChanged(books[verse.Book - 1]);
+			await ChapterChanged(chapters[verse.Chapter - 1]);
+
+			await InvokeAsync(StateHasChanged);
+
+			await jSRuntime.InvokeVoidAsync("ScrollWithHeight", "BookList", verse.Book);
+			await jSRuntime.InvokeVoidAsync("ScrollWithHeight", "ChapterList", verse.Chapter);
+			await jSRuntime.InvokeVoidAsync("SwitchFocusTo", "VerseList");
+			await jSRuntime.InvokeVoidAsync("ScrollToView", $"v({verse.Verse - 1})");
+			isGlobalSearch = false;
+		}
+
+		verse.Text = verse.Text.RemoveHighlight();
 		selectedVerse = verse;
 	}
 
 	private async Task OnBookSearchChanged()
 	{
+		searchChapter = "";
+		searchVerse = "";
+
 		if (String.IsNullOrWhiteSpace(searchBook))
 		{
 			books = await BibleService.GetBooksAsync(selectedTranslation);
 			return;
 		}
 
-		searchChapter = "";
-		searchVerse = "";
 
 		books = await BibleService.SearchBooksAsync(selectedTranslation, searchBook, settingsService.settings.AlwaysEnglishBookNames);
 
@@ -143,6 +171,7 @@
 
 	private async Task OnChapterSearchChanged()
 	{
+		searchChapter = Regex.Replace(searchChapter, "[^0-9]", "");
 		await SearchChapterNumber(); 
 	}
 
@@ -150,6 +179,23 @@
 	{
 		if(type == 'b'){
 			searchBook = Regex.Replace(searchBook, @"(\d)(\p{L})", "$1 $2");
+		}
+
+		if (type == 't')
+		{
+			if (String.IsNullOrWhiteSpace(searchVerseText)){
+				await ChapterChanged(selectedChapter);
+				isGlobalSearch = false;
+				return;
+			}
+			
+			isGlobalSearch = true;
+
+			verses = searchVerseText.StartsWith('.') ?
+					await BibleService.SearchVerseGloballyAsync(selectedTranslation, searchVerseText.Substring(1))
+			: await BibleService.SearchVerseFromChapterAsync(selectedTranslation, selectedBook.Id, selectedChapter.Id, searchVerseText);
+
+			//TODO add option for search mode selection
 		}
 
 		if (e.Code != "Enter")
@@ -167,12 +213,14 @@
 		}
 		if (type == 'v' && verses.Count > 0 && !String.IsNullOrWhiteSpace(searchVerse))
 		{
+			searchVerse = Regex.Replace(searchVerse, "[^0-9]", "");
 			await SearchVerseNumber();
 		}
 	}
 
 	private async Task SearchChapterNumber()
 	{
+		searchVerse = "";
 		int searchedChapterNumber;
 		bool isNumber = Int32.TryParse(searchChapter, out searchedChapterNumber);
 		if (isNumber && searchedChapterNumber > 0)
@@ -181,7 +229,6 @@
 			await ChapterChanged(chapters[clamp]);
 			await jSRuntime.InvokeVoidAsync("ScrollWithHeight", "ChapterList", searchedChapterNumber);
 			await jSRuntime.InvokeVoidAsync("SwitchFocusTo", "VerseSearch");
-			searchVerse = "";
 		}
 	}
 
