--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -14,6 +14,8 @@
 @using Beacon.Blazor.Components.Songs
 @using Beacon.Blazor.Components.Bibles
 @using Beacon.Blazor.Components.Controls
+@using Beacon.WPF
+@using System.Windows
 
 @using WpfScreenHelper
 @using Majorsoft.Blazor.Components.Debounce
