--- a/Beacon/Blazor/Pages/BibleLibrary.razor
+++ b/Beacon/Blazor/Pages/BibleLibrary.razor
@@ -40,7 +40,7 @@
 			placeholder="Verse" @bind-Value="searchVerse" @bind-Value:event="oninput"  @onkeyup="async (args) => { await OnKeySearch(args, 'v'); }"></DebounceInput>
 
 			<div class="flex flex-col mt-3.5 w-full gap-2">
-				<BeaconSearchMode isBibleSearchModes="true"></BeaconSearchMode>
+				 <BeaconSearchMode isBibleSearchModes="true"></BeaconSearchMode> 
 
 				<DebounceInput id="VerseTextSearch" class="bg-default text-accented border-0  h-16 w-full rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 				placeholder="Search text..." @bind-Value="searchVerseText" @bind-Value:event="oninput" @onkeyup="async (args) => { await OnKeySearch(args, 't'); }"></DebounceInput>
@@ -53,7 +53,7 @@
 
 			<BibleLanguageList SelectedTranslation="@selectedTranslation" Translations="translations" SelectedTranslationChanged="TranslationChanged"></BibleLanguageList>
 
-			<VerseList IsGlobalMode="isGlobalSearch" Verses="verses" SelectedVerse="selectedVerse" SelectedVerseChanged="VerseChanged"></VerseList>
+			<VerseList SelectedPortionChanged="PortionChanged" IsGlobalMode="isGlobalSearch" Verses="verses" SelectedVerse="selectedVerse" SelectedVerseChanged="VerseChanged"></VerseList>
 		</div>
 
 	</div>
@@ -68,6 +68,7 @@
 	private List<Chapter> chapters { get; set; } = new();
 	private List<BeaconVerse> verses { get; set; } = new();
 	private List<string> translations { get; set; } = new();
+
 
 	private Book selectedBook = new Book();
 	private Chapter selectedChapter = new Chapter();
@@ -146,7 +147,33 @@
 
 		verse.Text = verse.Text.RemoveHighlight();
 		selectedVerse = verse;
+
+
+		DisplayWindow.Instance.SetWindow(settingsService.settings.ProjectionMonitor);
+		DisplayWindow.Instance.Show();
+		DisplayWindow.Instance.Content.Text = verse.Text;
+		DisplayWindow.Instance.Content.TextWrapping = TextWrapping.Wrap;
+		DisplayWindow.Instance.Content.Width = 1920;
+		DisplayWindow.Instance.Header1.Text = selectedBook.Name.RemoveHighlight() + " " + selectedChapter.Id + ":" + verse.Verse;
+
+		if (verse.Text.Count() > 400)
+		{
+			DisplayWindow.Instance.Content.FontSize = 70;
+		}
+		else if (verse.Text.Count() > 200)
+		{
+			DisplayWindow.Instance.Content.FontSize = 85;
+		}
+		else
+		{
+			DisplayWindow.Instance.Content.FontSize = 100;
+		}
 	}
+
+	private async Task PortionChanged(Tuple<int, string> portion){
+		DisplayWindow.Instance.Content.HighlightCount = portion.Item1;
+	}
+
 
 	private async Task OnBookSearchChanged()
 	{
