--- a/Beacon/Blazor/Pages/SettingsPage.razor
+++ b/Beacon/Blazor/Pages/SettingsPage.razor
@@ -21,23 +21,33 @@
     <!-- |===== GENERAL SETTINGS ======| -->
     <div class="@(activeCategory == SettingsCategory.General ? "p-10" : "hidden")">
         <BeaconCheckBox Message="Enable Dark Mode" IsChecked="settingsService.settings.EnableDarkMode"
-                        OnClick="DarkModeToggle"></BeaconCheckBox>
+        OnClick="DarkModeToggle"></BeaconCheckBox>
 
-        <div class="grid items-center md:grid-cols-2">
-            <div>
-                <label>Monitor to show Projection</label>
-            </div>
-            <div class="flex items-center gap-2 md:justify-end">
-                @* <select id="monitorCount" value="@deviceName" @onchange="@((ChangeEventArgs e) => { settingsService.ChosenMonitor = e.Value.ToString(); })"
-                        class="w-fit py-2 pr-14 pl-4 bg-gray_darkest border-0 focus:ring-0 text-white_normal">
-                    @foreach (var monitor in monitorList)
-                    {
-                        <option value="@monitor.Item1">@monitor.Item2.Replace("\\\\.\\", "").Replace("DISPLAY", "DISPLAY ").Trim()</option>
-                    }
-                </select> *@
-            </div>
+        <br />
+        <br />
+
+        <label class="text-accented font-bold tracking-widest uppercase">Monitor</label>
+        <div class="flex space-x-2">
+            @foreach (var monitor in WpfScreenHelper.Screen.AllScreens){
+                <div class="bg-sidepanel flex h-10 cursor-pointer select-none items-center justify-center space-x-3 rounded-[6px] px-5 text-xs hover:bg-primary hover:text-d-text-accent  @(monitor.DeviceName == settingsService.settings.ProjectionMonitor ? "bg-primary text-accented-on-primary" : "")"
+                     @onclick="async () => await ChangeProjectionMonitor(monitor.DeviceName)">
+
+                    @monitor.DeviceName.Replace("\\\\.\\", "").Replace("DISPLAY", "DISPLAY ")
+
+                </div>
+            }
         </div>
-    
+        @* <div class="flex items-center gap-2 md:justify-end">
+             <select id="monitorCount" value="@deviceName" @onchange="@((ChangeEventArgs e) => { settingsService.ChosenMonitor = e.Value.ToString(); })"
+                    class="w-fit py-2 pr-14 pl-4 bg-gray_darkest border-0 focus:ring-0 text-white_normal">
+                @foreach (var monitor in monitorList)
+                {
+                    <option value="@monitor.Item1">@monitor.Item2.Replace("\\\\.\\", "").Replace("DISPLAY", "DISPLAY ").Trim()</option>
+                }
+            </select> 
+
+        </div> *@
+
     </div>
 
     <!-- |===== SONG LIBRARY SETTINGS ======| -->
@@ -48,7 +58,7 @@
             <BeaconButton Message="TAGALOG"></BeaconButton>
             <BeaconButton Message="ENGLISH"></BeaconButton>
         </div>
-        
+
         <br/>
         <br/>
 
@@ -64,11 +74,11 @@
 
         <label class="text-accented font-bold tracking-widest">LIBRARY</label>
         <BeaconCheckBox Message="Confirm before deleting a Song" IsChecked="settingsService.settings.AlwaysConfirmSongDeletion"
-                        OnClick="ConfirmSongDeletionToggle"></BeaconCheckBox>
+        OnClick="ConfirmSongDeletionToggle"></BeaconCheckBox>
         <BeaconCheckBox Message="Show Lyric safe area margin when editing" IsChecked="settingsService.settings.ShowLyricMargin"
-                        OnClick="ShowLyricMarginToggle"></BeaconCheckBox>
+        OnClick="ShowLyricMarginToggle"></BeaconCheckBox>
         <BeaconCheckBox Message="Enable 'Search Mode' (if disabled: use shortcuts)" IsChecked="settingsService.settings.EnableSearchModeUI"
-                        OnClick="SearchModeUIToggle"></BeaconCheckBox>
+        OnClick="SearchModeUIToggle"></BeaconCheckBox>
     </div>
 
 
@@ -80,12 +90,6 @@
     public EventCallback ChangeState { get; set; }
 
     private SettingsCategory activeCategory;
-
-
-    protected override async Task OnInitializedAsync()
-    {
-    }
-
 
     private async Task DarkModeToggle(){
         settingsService.settings.EnableDarkMode = !settingsService.settings.EnableDarkMode;
@@ -110,6 +114,13 @@
     private async Task SearchModeUIToggle()
     {
         settingsService.settings.EnableSearchModeUI = !settingsService.settings.EnableSearchModeUI;
+        await settingsService.Save();
+        await ChangeState.InvokeAsync();
+    }
+
+    private async Task ChangeProjectionMonitor(string monitor)
+    {
+        settingsService.settings.ProjectionMonitor = monitor;
         await settingsService.Save();
         await ChangeState.InvokeAsync();
     }
