--- a/Beacon/Blazor/Pages/BibleLibrary.razor
+++ b/Beacon/Blazor/Pages/BibleLibrary.razor
@@ -40,7 +40,7 @@
 			placeholder="Verse" @bind-Value="searchVerse" @bind-Value:event="oninput"  @onkeyup="async (args) => { await OnKeySearch(args, 'v'); }"></DebounceInput>
 
 			<div class="flex flex-col mt-3.5 w-full gap-2">
-				 <BeaconSearchMode isBibleSearchModes="true"></BeaconSearchMode> 
+				<BeaconSearchMode isBibleSearchModes="true"></BeaconSearchMode> 
 
 				<DebounceInput id="VerseTextSearch" class="bg-default text-accented border-0  h-16 w-full rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 				placeholder="Search text..." @bind-Value="searchVerseText" @bind-Value:event="oninput" @onkeyup="async (args) => { await OnKeySearch(args, 't'); }"></DebounceInput>
@@ -152,9 +152,11 @@
 		DisplayWindow.Instance.SetWindow(settingsService.settings.ProjectionMonitor);
 		DisplayWindow.Instance.Show();
 		DisplayWindow.Instance.Content.Text = verse.Text;
+		//Edit Color Highlight here
 		DisplayWindow.Instance.Content.TextWrapping = TextWrapping.Wrap;
 		DisplayWindow.Instance.Content.Width = 1920;
 		DisplayWindow.Instance.Header1.Text = selectedBook.Name.RemoveHighlight() + " " + selectedChapter.Id + ":" + verse.Verse;
+		DisplayWindow.Instance.Header2.Text = selectedTranslation.ToUpper();
 
 		if (verse.Text.Count() > 400)
 		{
