--- a/Beacon/WPF/App.xaml
+++ b/Beacon/WPF/App.xaml
@@ -7,6 +7,7 @@
     xmlns:local="clr-namespace:Beacon.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     StartupUri="MainWindow.xaml"
+    ShutdownMode="OnMainWindowClose"
     mc:Ignorable="d">
     <Application.Resources>
         <!-- =====================================
